refactor: Display most recent rounds at top